--- a/stylesheets/cointrack.css
+++ b/stylesheets/cointrack.css
@@ -2356,7 +2356,7 @@ h1.title span.text-muted {
   min-height: 20px;
   max-height: 70px;
 }
-#price-loading .progress-bar {
+.progress-bar {
   width: 100%;
 }
 #footer p {
